--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,6 @@ modellingwalkthrough_2.Rmd
 modellingwalkthrough_2.html
 to-delete/
 data/model-table.xlsx
-<<<<<<< HEAD
 not-git/
-=======
-not-git/
->>>>>>> remove-datacsv
+.DS_Store
+data/~$MelodicEvoSeq.xlsx
